# playlistworks

./: .env_example  .gitignore  README.md  pyproject.toml
scripts/: setup.sh
src/: Main.qml  main.py
src/common/: database.py  handlers.py  models.py  repository.py  schemas.py  test_database.py  test_repository.py
src/common/components/: ErrorDialog.qml  HelpDialog.qml  LibraryDirectoryDialog.qml  LibraryScanningDialog.qml  SearchBar.qml  SettingsDialog.qml  StatusBar.qml  qmldir
src/common/services/: backend.py  backend_worker.py  gui.py
src/common/utils/: headless.py  path.py  settings.py
src/core/: types.py
src/features/player/: types.py
src/features/player/components/: PlaybackControls.qml  qmldir
src/features/player/services/: playback.py
src/features/playlists/: playlist.py  repository.py  schemas.py  test_repository.py
src/features/playlists/components/: PlaylistDeletionDialog.qml  PlaylistEditionDialog.qml  PlaylistSidebar.qml  qmldir
src/features/playlists/services/: playlists.py
src/features/playlists/utils/: qmlUtils.js
src/features/tracks/: models.py  repository.py  schemas.py  test_repository.py
src/features/tracks/components/: TrackTable.qml  qmldir
src/features/tracks/services/: mp3.py  tracks.py  vorbis.py
src/features/tracks/utils/: metadata.py
tests/common/: test_common_repository.py  test_database.py
tests/features/playlists/: test_playlists_repository.py
tests/features/tracks/: test_tracks_repository.py
